<resources>
    <string name="app_name">Quiz</string>
    <string name="result">Result:</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="Submit">Submit</string>
    <string name="previous">Previous</string>
    <string name="your_result">Your result:</string>
</resources>