<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/result_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/your_result"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_label"
        tools:text="0"/>

    <Button
        android:id="@+id/share"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:drawableLeft="?attr/actionModeShareDrawable"
        android:text="@string/share"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_label" />

    <Button
        android:id="@+id/back"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:drawableLeft="?attr/homeAsUpIndicator"
        android:text="@string/back"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_label" />

    <Button
        android:id="@+id/exit"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
        android:text="@string/exit"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_label" />

</androidx.constraintlayout.widget.ConstraintLayout>